[package]
description = "Resumable FSM-based Postgres tasks"
edition = "2021"
license = "MIT"
name = "pg-fsm"
repository = "https://github.com/imbolc/pg-fsm"
version = "0.1.0"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
source-chain = "0.1"
sqlx = { version = "0.6", features = [
  "json",
  "chrono",
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
] }
sqlx-error = "0.1"
thiserror = "1"
tokio = "1"
tokio-stream = "0.1"


[dev-dependencies]
anyhow = "1"
rusty-hook = "0.11"
tokio = { version = "1", features = ["full"] }
