[package]
description = "Resumable state machine based Postgres tasks"
edition = "2021"
license = "MIT"
name = "pg_task"
repository = "https://github.com/imbolc/pg_task"
version = "0.0.1"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["std", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
source-chain = "0.1"
sqlx = { version = "0.6", features = [
  "json",
  "chrono",
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
] }
sqlx-error = "0.1"
thiserror = "1"
tokio = "1"
tokio-stream = "0.1"
tracing = "0.1"


[dev-dependencies]
anyhow = "1"
dotenv = "0.15.0"
rusty-hook = "0.11"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
